src/objects/RMD_Factors__c.object
<CustomObject>
    <description>XLR8 custom object that contains the RMD Uniform, Single and Joint IRS Life Expectancy Values, which are used to calculate RMD.</description>
    <fields>
        <fullName>Age_EOY_2__c</fullName>
        <label>Age EOY 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_EOY__c</fullName>
        <label>Age EOY</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calculation_Type__c</fullName>
        <label>Calculation Type</label>
        <picklist>
            <picklistValues>
                <fullName>JOINT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SINGLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNIFORM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RMD_Effective_End_Date__c</fullName>
        <label>RMD Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RMD_Effective_Start_Date__c</fullName>
        <label>RMD Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RMD_Factor__c</fullName>
        <label>RMD Factor</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>RMD Factors</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Calculation_Type__c</columns>
        <columns>RMD_Effective_Start_Date__c</columns>
        <columns>RMD_Effective_End_Date__c</columns>
        <columns>Age_EOY__c</columns>
        <columns>Age_EOY_2__c</columns>
        <columns>RMD_Factor__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Joint</fullName>
        <columns>NAME</columns>
        <columns>Calculation_Type__c</columns>
        <columns>RMD_Effective_Start_Date__c</columns>
        <columns>RMD_Effective_End_Date__c</columns>
        <columns>Age_EOY__c</columns>
        <columns>Age_EOY_2__c</columns>
        <columns>RMD_Factor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Calculation_Type__c</field>
            <operation>equals</operation>
            <value>JOINT</value>
        </filters>
        <label>Joint</label>
    </listViews>
    <listViews>
        <fullName>Single</fullName>
        <columns>NAME</columns>
        <columns>Calculation_Type__c</columns>
        <columns>RMD_Effective_Start_Date__c</columns>
        <columns>RMD_Effective_End_Date__c</columns>
        <columns>Age_EOY__c</columns>
        <columns>RMD_Factor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Calculation_Type__c</field>
            <operation>equals</operation>
            <value>SINGLE</value>
        </filters>
        <label>Single</label>
    </listViews>
    <listViews>
        <fullName>Uniform</fullName>
        <columns>NAME</columns>
        <columns>Calculation_Type__c</columns>
        <columns>RMD_Effective_Start_Date__c</columns>
        <columns>RMD_Effective_End_Date__c</columns>
        <columns>Age_EOY__c</columns>
        <columns>RMD_Factor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Calculation_Type__c</field>
            <operation>equals</operation>
            <value>UNIFORM</value>
        </filters>
        <label>Uniform</label>
    </listViews>
    <nameField>
        <label>RMD Table ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RMD Factors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>